<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wizards"
            android:icon="@drawable/hat_wizard_solid"
            android:title="@string/wizards" />
        <item
            android:id="@+id/nav_spells"
            android:icon="@drawable/wand_sparkles_solid"
            android:title="@string/spells" />
        <item
            android:id="@+id/nav_houses"
            android:icon="@drawable/other_houses_fill0_wght400_grad0_opsz48"
            android:title="@string/houses" />
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/wind_solid"
            android:title="@string/ingredients" />
    </group>
</menu>