<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card"
        android:padding="10dp">

        <TextView
            android:id="@+id/heading_firstName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/first_name"
            tools:text="Something here"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heading_lastName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/last_name"
            tools:text="Something here"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/heading_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/id"
            tools:text="Something here"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/wizard_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            tools:text="Something here"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading_firstName" />

        <TextView
            android:id="@+id/wizard_lname"
            android:layout_width="wrap_content"
            tools:text="Something here"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading_lastName" />
        <TextView
            android:id="@+id/wizard_id"
            android:layout_width="wrap_content"
            tools:text="Something here"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:maxLength="10"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading_id" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>